refactor: update texts

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -20,7 +20,7 @@
     "description": "If you are interested in our activities or services, please feel free to contact us."
   },
   "about": {
-    "title": "About Us",
+    "title": "About Agentic UI",
     "description": "With 30 years of experience in Mac, iOS, and web app development, we're dedicated to crafting intuitive interfaces and reliable user experiences for the AI x UX world."
   },
   "cta": {
