--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -20,7 +20,7 @@
     "description": "当サイトの活動やサービスに興味を持たれた方、ぜひお気軽にお問い合わせください。"
   },
   "about": {
-    "title": "運営",
+    "title": "Agentic UIについて",
     "description": "30年にわたるMac、iOS、Webアプリ開発の経験を通じ、AI x UXの領域で、直感的で快適なインターフェースや安心感のある体験を追求し続けます。"
   },
   "cta": {
